Project

General

Profile

Actions

Bug #11594

closed

ldterm: cast between incompatible function types

Added by Toomas Soome about 4 years ago. Updated about 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 8:

    ../../common/io/ldterm.c:577:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type]
      (int (*)())ldtermrput,
      ^
    ../../common/io/ldterm.c:578:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type]
      (int (*)())ldtermrsrv,
      ^
    ../../common/io/ldterm.c:597:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type]
      (int (*)())ldtermwput,
      ^
    ../../common/io/ldterm.c:598:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type]
      (int (*)())ldtermwsrv,
      ^
    cc1: all warnings being treated as errors

Actions #1

Updated by Toomas Soome about 4 years ago

Testing: build/install/boot.

Actions #2

Updated by Electric Monk about 4 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit bf10ed2ef23d4a6289a032ea1be97e21e6258009

commit  bf10ed2ef23d4a6289a032ea1be97e21e6258009
Author: Toomas Soome <tsoome@me.com>
Date:   2019-09-03T20:01:43.000Z

    11594 ldterm: cast between incompatible function types
    Reviewed by: Andrew Stormont <andyjstormont@gmail.com>
    Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF