usr/src/uts/common/io/ldterm.c
@@ -416,11 +416,11 @@ _info(struct modinfo *modinfop)
 
 static int	ldtermopen(queue_t *, dev_t *, int, int, cred_t *);
 static int	ldtermclose(queue_t *, int, cred_t *);
-static void	ldtermrput(queue_t *, mblk_t *);
-static void	ldtermrsrv(queue_t *);
+static int	ldtermrput(queue_t *, mblk_t *);
+static int	ldtermrsrv(queue_t *);
 static int	ldtermrmsg(queue_t *, mblk_t *);
-static void	ldtermwput(queue_t *, mblk_t *);
-static void	ldtermwsrv(queue_t *);
+static int	ldtermwput(queue_t *, mblk_t *);
+static int	ldtermwsrv(queue_t *);
 static int	ldtermwmsg(queue_t *, mblk_t *);
 static mblk_t	*ldterm_docanon(unsigned char, mblk_t *, size_t, queue_t *,
 				ldtermstd_state_t *, int *);
@@ -574,8 +574,8 @@ static struct module_info ldtermmiinfo = {
 
 
 static struct qinit ldtermrinit = {
-	(int (*)())ldtermrput,
-	(int (*)())ldtermrsrv,
+	ldtermrput,
+	ldtermrsrv,
 	ldtermopen,
 	ldtermclose,
 	NULL,
@@ -594,8 +594,8 @@ static struct module_info ldtermmoinfo = {
 
 
 static struct qinit ldtermwinit = {
-	(int (*)())ldtermwput,
-	(int (*)())ldtermwsrv,
+	ldtermwput,
+	ldtermwsrv,
 	ldtermopen,
 	ldtermclose,
 	NULL,
@@ -945,7 +945,7 @@ ldtermclose(queue_t *q, int cflag, cred_t *crp)
 /*
  * Put procedure for input from driver end of stream (read queue).
  */
-static void
+static int
 ldtermrput(queue_t *q, mblk_t *mp)
 {
 	ldtermstd_state_t *tp;
@@ -972,7 +972,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 		if (iocp->ioc_id == tp->t_iocid) {
 			tp->t_state &= ~TS_IOCWAIT;
 			freemsg(mp);
-			return;
+			return (0);
 		}
 	}
 
@@ -980,7 +980,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 
 	default:
 		(void) putq(q, mp);
-		return;
+		return (0);
 
 		/*
 		 * Send these up unmolested
@@ -991,12 +991,12 @@ ldtermrput(queue_t *q, mblk_t *mp)
 	case M_IOCNAK:
 
 		putnext(q, mp);
-		return;
+		return (0);
 
 	case M_IOCACK:
 
 		ldterm_ioctl_reply(q, mp);
-		return;
+		return (0);
 
 	case M_BREAK:
 
@@ -1021,7 +1021,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 					if ((mp = allocb(3, BPRI_HI)) == NULL) {
 						cmn_err(CE_WARN,
 						    "ldtermrput: no blocks");
-						return;
+						return (0);
 					}
 					mp->b_datap->db_type = M_DATA;
 					*mp->b_wptr++ = (uchar_t)'\377';
@@ -1036,7 +1036,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 			} else {
 				freemsg(mp);
 			}
-			return;
+			return (0);
 		}
 		/*
 		 * We look at the apparent modes here instead of the
@@ -1060,7 +1060,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 				if ((mp = allocb(3, BPRI_HI)) == NULL) {
 					cmn_err(CE_WARN,
 					    "ldtermrput: no blocks");
-					return;
+					return (0);
 				}
 				mp->b_datap->db_type = M_DATA;
 				*mp->b_wptr++ = (uchar_t)'\377';
@@ -1075,7 +1075,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 				if ((mp = allocb(1, BPRI_HI)) == NULL) {
 					cmn_err(CE_WARN,
 					    "ldtermrput: no blocks");
-					return;
+					return (0);
 				}
 				mp->b_datap->db_type = M_DATA;
 				*mp->b_wptr++ = '\0';
@@ -1084,7 +1084,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 		} else {
 			freemsg(mp);
 		}
-		return;
+		return (0);
 
 	case M_CTL:
 		DEBUG3(("ldtermrput: M_CTL received\n"));
@@ -1098,7 +1098,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 			    "Non standard M_CTL received by ldterm module\n"));
 			/* May be for someone else; pass it on */
 			putnext(q, mp);
-			return;
+			return (0);
 		}
 		qryp = (struct iocblk *)mp->b_rptr;
 
@@ -1165,7 +1165,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 			break;
 		}
 		putnext(q, mp);	/* In case anyone else has to see it */
-		return;
+		return (0);
 
 	case M_FLUSH:
 		/*
@@ -1202,7 +1202,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 			(void) putnextctl(wrq, M_STARTI);
 			DEBUG1(("M_STARTI down\n"));
 		}
-		return;
+		return (0);
 
 	case M_DATA:
 		break;
@@ -1226,7 +1226,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 	 */
 	if (tp->t_state & TS_NOCANON) {
 		(void) putq(q, mp);
-		return;
+		return (0);
 	}
 	bp = mp;
 
@@ -1471,6 +1471,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
 		(void) putnextctl(wrq, M_STOPI);
 		DEBUG1(("M_STOPI down\n"));
 	}
+	return (0);
 }
 
 
@@ -1479,7 +1480,7 @@ ldtermrput(queue_t *q, mblk_t *mp)
  * ('\') processing, gathering into messages, upper/lower case input
  * mapping.
  */
-static void
+static int
 ldtermrsrv(queue_t *q)
 {
 	ldtermstd_state_t *tp;
@@ -1526,6 +1527,7 @@ ldtermrsrv(queue_t *q)
 		tp->t_state &= ~TS_TBLOCK;
 		(void) putctl(WR(q), M_STARTI);
 	}
+	return (0);
 }
 
 /*
@@ -3050,7 +3052,7 @@ ldterm_wenable(void *addr)
  * if there's already something pending or if its downstream neighbor
  * is clogged.
  */
-static void
+static int
 ldtermwput(queue_t *q, mblk_t *mp)
 {
 	ldtermstd_state_t *tp;
@@ -3074,7 +3076,7 @@ ldtermwput(queue_t *q, mblk_t *mp)
 			    (*mp->b_rptr == FLUSHW)) {
 				tp->t_state &= ~TS_FLUSHWAIT;
 				freemsg(mp);
-				return;
+				return (0);
 			}
 			/*
 			 * This is coming from above, so we only
@@ -3210,7 +3212,7 @@ ldtermwput(queue_t *q, mblk_t *mp)
 			putnext(q, mp);
 			break;
 		}
-		return;
+		return (0);
 	}
 	/*
 	 * If our queue is nonempty or there's a traffic jam
@@ -3243,24 +3245,25 @@ ldtermwput(queue_t *q, mblk_t *mp)
 				 */
 			default:
 				(void) ldtermwmsg(q, mp);
-				return;
+				return (0);
 			}
 		}
 		(void) putq(q, mp);
-		return;
+		return (0);
 	}
 	/*
 	 * We can take the fast path through, by simply calling
 	 * ldtermwmsg to dispose of mp.
 	 */
 	(void) ldtermwmsg(q, mp);
+	return (0);
 }
 
 
 /*
  * Line discipline output queue service procedure.
  */
-static void
+static int
 ldtermwsrv(queue_t *q)
 {
 	mblk_t *mp;
@@ -3288,6 +3291,7 @@ ldtermwsrv(queue_t *q)
 			break;
 		}
 	}
+	return (0);
 }
 
 
